#=============================================================================
# Copyright 2015 Christian Frisson / UMONS.
#
# Distributed under the OSI-approved BSD License (the "License");
# see accompanying file Copyright.txt for details.
#
# This software is distributed WITHOUT ANY WARRANTY; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the License for more information.
#=============================================================================

project(InfoPhys)

cmake_minimum_required(VERSION 2.8)

add_subdirectory(github-ChristianFrisson-H3DCore)
